--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,8 +1,9 @@
+
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo3.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vastufy</title>
   </head>
